# server.js
@@ -11,34 +11,34 @@ app.get('/', (req, res) => {
 app.use(express.json())
 
 //API utente
-app.use('/signUp', require('./routes/signUp'))
+app.use('/signUp', require('./routes/signUp')) //Swagger
 //app.use('/deletePrenotazione', require('./routes/deletePren'));
-app.use('/deleteAppuntamento', require('./routes/deleteApp'));
-app.use('/arrayLibri', require('./routes/getBooks'))
+app.use('/deleteAppuntamento', require('./routes/deleteApp')); //Swagger
+app.use('/arrayLibri', require('./routes/getBooks')) //Swagger
 //app.use('/Reserve', require('./routes/patchReserve'))
 app.use('/Rented', require('./routes/patchRent'))
-app.use('/getMulta', require('./routes/getMulta'))
-app.use('/logout', require('./routes/logout'))
-app.use('/createApp', require('./routes/postApp'))
+app.use('/getMulta', require('./routes/getMulta')) //Swagger
+app.use('/logout', require('./routes/logout')) //Swagger
+app.use('/createApp', require('./routes/postApp')) //Swagger
 //app.use('/createPren', require('./routes/postPren'))
 app.use('/getAppuntamento', require('./routes/getApp'))
 
 // API libro
-app.use('/ricerca', require('./routes/getLibro'));
-app.use('/book', require('./routes/deleteLibro'));
-app.use('/filter', require('./routes/Filter'));
+app.use('/ricerca', require('./routes/getLibro')); //Swagger
+app.use('/book', require('./routes/deleteLibro')); //Swagger
+app.use('/filter', require('./routes/Filter')); //Swagger
 app.use('/disponibilita', require('./routes/patchDisponibilita'))
 
 //API authentication
-app.use('/login', require('./routes/login'));
+app.use('/login', require('./routes/login')); //Swagger
 
 
 //API admin
-app.use('/getAll', require('./routes/getAllusers'));
-app.use('/newLibro', require('./routes/newLibro'));
-app.use('/deleteUtente', require('./routes/deleteUtente'));
-app.use('/deleteLibro', require('./routes/deleteLibro'));
-app.use('/Multa', require('./routes/postMulta'))
+app.use('/getAll', require('./routes/getAllusers')); //Swagger
+app.use('/newLibro', require('./routes/newLibro')); //Swagger
+app.use('/deleteUtente', require('./routes/deleteUtente')); //Swagger
+app.use('/deleteLibro', require('./routes/deleteLibro')); //Swagger
+app.use('/Multa', require('./routes/postMulta')) //Swagger
 
 module.exports = app;
 
